修复了依赖之间冲突的问题，且进行了小测试